Fix deploy failure in nightly build (#2372)
* Split the deploy.sh script to two version, deploy-spark1 and deploy-spark2. As spark1 is built on jdk7 but spark2 is built on jdk8

* make deploy script executable

* fix a bug